--- a/20220607_food court/css/style.css
+++ b/20220607_food court/css/style.css
@@ -4,8 +4,9 @@
 
 /* Variables CSS */
 :root {
-/* color */
-    --first-color: hsl(160, 100%, 25%); /* #008156 */
+    /* color */
+    --first-color: hsl(160, 100%, 25%);
+    /* #008156 */
     --first-color-bright: hsl(160, 100%, 40%);
     --second-color: hsl(339, 77%, 59%);
     --third-color: hsl(42, 87%, 52%);
@@ -14,29 +15,36 @@
     --body-color: #fff;
     --container-color: #fff;
 
-/* font */
+    /* font */
     --body-font: 'Noto Sans KR', sans-serif;
-    --biggest-font-size: 2.25rem; /* 36px */
-    --h1-font-size: 2rem; /* 32px */
-    --h2-font-size: 1.5rem; /* 24px */
-        --h3-font-size: 1.25rem; /* 20px */
-    --normal-font-size: 1rem; /* 16px */
+    --biggest-font-size: 2.25rem;
+    /* 36px */
+    --h1-font-size: 2rem;
+    /* 32px */
+    --h2-font-size: 1.5rem;
+    /* 24px */
+    --h3-font-size: 1.25rem;
+    /* 20px */
+    --normal-font-size: 1rem;
+    /* 16px */
     --small-font-size: .8rem;
     --smaller-font-size: .75rem;
 
-/* font weight */
---font-medium: 500;
---font-bold: 700;
+    /* font weight */
+    --font-medium: 500;
+    --font-bold: 700;
 
     /* z-index */
---z-index: 100;
+    --z-index: 100;
 }
+
 /* BASE */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
 body {
     position: relative;
     font-family: var(--body-font);
@@ -44,19 +52,23 @@ body {
     color: var(--text-color);
     background-color: var(--body-color);
 }
+
 h1,
 h2,
 h3 {
     color: var(--title-color);
     font-weight: var(--font-bold);
 }
+
 ul {
     list-style: var(--normal-font-size);
     list-style: none;
 }
-a{
+
+a {
     text-decoration: none;
 }
+
 img {
     max-width: 100%;
     display: block;
@@ -68,76 +80,109 @@ img {
     margin-left: 1rem;
     margin-right: 1rem;
 }
+
 header {
     background-color: var(--first-color);
-    position: fixed;   /* 스크롤해도 항상 위치 고정 */
+    position: fixed;
+    /* 스크롤해도 항상 위치 고정 */
     right: 0;
     left: 0;
+    top: 0;
 
 }
+
 nav {
     height: 44px;
-    display: flex;    /*기본값: 수평 방향*/
-    justify-content:space-between ;    /*양쪽정렬*/
-    align-items: center;   /*교차축 가운데 */
+    display: flex;
+    /*기본값: 수평 방향*/
+    justify-content: space-between;
+    /*양쪽정렬*/
+    align-items: center;
+    /*교차축 가운데 */
 }
-nav i{
-    color:#fff;
-    font-size: var(--h3-font-size); /*아이콘 좀 크게*/
+
+nav i {
+    color: #fff;
+    font-size: var(--h3-font-size);
+    /*아이콘 좀 크게*/
 }
-.nav-toggle{
-    display: none;  /*안보이게 하자*/
+
+.nav-toggle {
+    display: none;
+    /*안보이게 하자*/
 }
+
 .nav-list {
-    display: flex;   /*기본값: 수평 방향*/
-    column-gap: 1.25rem;   /*   20px  */
+    display: flex;
+    /*기본값: 수평 방향*/
+    column-gap: 1.25rem;
+    /*   20px  */
 }
-.nav-link{
+
+.nav-link {
     color: #fff;
 }
+
+/*HOME*/
+main {
+    margin: 88px 0 0 0;
+}
+
 /* breakpoints */
 /* 2K & 4K */
 
 /* tablet */
-@media screen and (max-width: 600px ){   /* width가 600px 이하면 아래 css 적용*/
-    .nav-toggle{
+@media screen and (max-width: 600px) {
+
+    /* width가 600px 이하면 아래 css 적용*/
+    .nav-toggle {
         display: block;
         cursor: pointer;
-        position: absolute; /*위치 무시. 로고 가운데 정렬*/
+        position: absolute;
+        /*위치 무시. 로고 가운데 정렬*/
     }
-    .nav-logo{
-        margin: 0 auto;  /*로고 가운데 정렬*/
+
+    .nav-logo {
+        margin: 0 auto;
+        /*로고 가운데 정렬*/
     }
-    .nav-list{
+
+    .nav-list {
         position: absolute;
         top: 44px;
-        left:0;
+        left: 0;
         right: 0;
         /* width: 100%; */
         flex-direction: column;
         background-color: lightgrey;
         /*밑에거 둘 다 있어야 안보임 (가려짐)*/
-        height: 0;  
+        height: 0;
         overflow: hidden;
         transition: 1s;
 
     }
-    .nav-item{
-        padding: 0.5rem 1rem;  /*위 오 아 왼*/
-        text-align: center;  /*가운데 정렬*/
-        border-bottom: 1px solid white;  /*아래 선*/
+
+    .nav-item {
+        padding: 0.5rem 1rem;
+        /*위 오 아 왼*/
+        text-align: center;
+        /*가운데 정렬*/
+        border-bottom: 1px solid white;
+        /*아래 선*/
     }
-    .nav-link{
+
+    .nav-link {
         color: var(--title-color);
-        display: block; /*링크의 너비 : 컨텐츠 -> nav-item 만큼 늘리자*/
+        display: block;
+        /*링크의 너비 : 컨텐츠 -> nav-item 만큼 늘리자*/
     }
-    .show-menu{
+
+    .show-menu {
         height: 164px;
     }
-   
+
 
 }
 
 
 /* mobile */
-
