html,css,js add Now()

--- a/20220607_food court/css/style.css
+++ b/20220607_food court/css/style.css
@@ -152,15 +152,18 @@ h3 {
 
 }
 
+.now,
 .card:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
     transition: .4s;
 
 }
 
+.now .card-time,
 .card:hover .card-time {
     color: var(--second-color);
 }
+
 
 /* .card:hover .card-menu {
     color: #000;
